Fixed styles to remove extra space below the images.

--- a/client/signup/steps/design-type/style.scss
+++ b/client/signup/steps/design-type/style.scss
@@ -54,6 +54,11 @@
 		@include breakpoint( "<480px" ) {
 			display: none;
 		}
+
+		svg {
+			display: block;
+			width: 100%;
+		}
 	}
 
 	@at-root #{&}-copy {
